--- a/less/srd.less
+++ b/less/srd.less
@@ -193,6 +193,54 @@
 		#work_pullout.expanded {
 			height:150px;
 		}
+		
+		
+		
+		#categories_pullout {
+			height:0;
+			
+			width: 960px !important;
+			position: absolute;
+			background: rgba(93,80,79,.95);
+			top: 15px;
+			left: -20px;
+			padding:0 20px;
+			display:block;
+			color: @color_highlight;
+			overflow:hidden;
+			z-index:999999;
+			ul {
+				width:960px;
+				display:block;
+				ul {
+					display:inline;
+					float:left;
+					width:auto;
+				}
+				li {
+					.reset-dimensions;
+					margin:0;
+					padding:0;
+					float:left;
+					width:120px;
+					margin-right:20px;
+					margin-top:10px;
+					a {
+						display:inline;
+						width:auto;
+					}
+				}
+				li:nth-child(7n) {
+					margin-right:0;
+				} 
+			}
+		}
+
+		#categories_pullout.expanded {
+			height:210px;
+		}
+		
+		
 
 		nav {
 			.menu ul {
@@ -277,5 +325,36 @@
 {
 	.widget {
 		margin-bottom:0;
+	}
+	
+	
+	#sticky_footer_twitter_follow {
+		font-size:12px;
+		font-weight:bold;
+		text-decoration:none;
+		display:block;
+		span {
+			display:block;
+			float:left;
+			width:9px;
+			height:12px;
+			background:url(../images/fs_sprite.png) -5px -5px no-repeat;
+			margin-right:10px;
+		}
+	}
+	
+	#sticky_footer_rss_follow {
+		font-size:12px;
+		font-weight:bold;
+		text-decoration:none;
+		display:block;
+		span {
+			display:block;
+			float:left;
+			width:12px;
+			height:12px;
+			background:url(../images/fs_sprite.png) -28px -5px no-repeat;
+			margin-right:10px;
+		}
 	}
 }
