--- a/less/transitions.less
+++ b/less/transitions.less
@@ -35,9 +35,17 @@
 	-webkit-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
 
+#categories_pullout {
+	-webkit-transition-property: height;
+	-webkit-transition-duration: .3s;
+	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+}
+
+/*
 a{
 	-webkit-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
+*/
 
 #search_form {
 	-webkit-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
