--- a/stylesheets/less/index.less
+++ b/stylesheets/less/index.less
@@ -86,7 +86,8 @@
 		
 	#content_secondary {
 		img {
-			.drop-shadow(0px, 2px, 7px, #9e8886);
+			/*.drop-shadow(0px, 2px, 7px, #9e8886);*/
+			.drop-shadow(0px, 2px, 7px, rgba(158, 136, 134,0.6));
 
 		}
 	}
