--- a/stylesheets/less/global.less
+++ b/stylesheets/less/global.less
@@ -115,24 +115,25 @@ pre,code,tt {
 em { font-style: italic; }
 
 ul, ol {
-	list-style: square;
+	
 	margin-left:15px;
 	padding-top: 5px;
 	ul, ol {
 		padding-top:0;
 	}
 	li {
-		margin: 0;
+		margin-left: 20px;
 		font-size: 12px;
 		margin-bottom:5px;
 	}
 }
 
+ul {
+	list-style: square;
+}
+
 ol {
 	list-style:decimal;
-	li {
-		margin-left:20px;
-	}
 }
 
 dl {
