--- a/stylesheets/less/colorbox.less
+++ b/stylesheets/less/colorbox.less
@@ -8,7 +8,7 @@
 #colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
 #cboxOverlay{position:fixed; width:100%; height:100%;}
 #cboxMiddleLeft, #cboxBottomLeft{clear:left;}
-#cboxContent{position:relative; overflow:hidden; padding:1px; background:#3d302f;}
+#cboxContent{position:relative; overflow:hidden; padding:1px; background:@color_highlight; padding-bottom:5px;}
 #cboxLoadedContent{overflow:auto;}
 #cboxLoadedContent iframe{display:block; width:100%; height:100%; border:0;}
 #cboxTitle{margin:0;}
@@ -24,14 +24,42 @@
 #colorbox{}
 
         #cboxLoadedContent{margin-bottom:28px;}
-        #cboxTitle{position:absolute; bottom:3px; left:0; text-align:center; width:100%; color:#949494;}
-        #cboxCurrent{position:absolute; bottom:3px; left:58px; color:#949494;}
-        #cboxSlideshow{position:absolute; bottom:3px; right:30px; color:#0092ef;}
-        #cboxPrevious{position:absolute; bottom:0; left:0px; background:url(images/controls.png) -75px 0px no-repeat; width:25px; height:25px; text-indent:-9999px;}
-        #cboxPrevious.hover{background-position:-75px -25px;}
-        #cboxNext{position:absolute; bottom:0; left:27px; background:url(images/controls.png) -50px 0px no-repeat; width:25px; height:25px; text-indent:-9999px;}
-        #cboxNext.hover{background-position:-50px -25px;}	
+        #cboxTitle{position:absolute; bottom:3px; left:0; text-align:center; width:100%; color:@color_midtone;}
+        #cboxCurrent{position:absolute; bottom:3px; left:58px; color:@color_midtone;}
+        #cboxSlideshow{position:absolute; bottom:3px; right:30px; color:@color_midtone;}
+        #cboxPrevious {
+			position:absolute; 
+			bottom:5px; 
+			left:5px; 
+			background:url(../../images/fs_sprite.png) -200px -150px no-repeat; 
+			width:20px; 
+			height:20px; 
+			text-indent:-9999px; 
+			border-right:1px solid @color_midtone;
+			border-bottom:1px solid @color_midtone;
+		}
+        #cboxPrevious.hover{ }
+        #cboxNext {
+			position:absolute; 
+			bottom:5px; 
+			left:30px; 
+			background:url(../../images/fs_sprite.png) -180px -150px no-repeat; 
+			width:20px; 
+			height:20px; 
+			text-indent:-9999px;
+		}
+        #cboxNext.hover{ }	
         #cboxLoadingGraphic{background:url(images/loading.gif) center center no-repeat;}
-        #cboxClose{position:absolute; bottom:0; right:0; background:url(images/controls.png) -25px 0px no-repeat; width:25px; height:25px; text-indent:-9999px;}
-        #cboxClose.hover{background-position:-25px -25px;}
+        #cboxClose {
+			position:absolute; 
+			bottom:5px; 
+			right:5px; 
+			background:url(../../images/fs_sprite.png) -215px -145px no-repeat; 
+			width:20px; 
+			height:20px; 
+			text-indent:-9999px;
+			border-right:1px solid @color_midtone;
+			border-bottom:1px solid @color_midtone;
+		}
+        #cboxClose.hover{ }
 
