--- a/stylesheets/less/srd.less
+++ b/stylesheets/less/srd.less
@@ -271,11 +271,110 @@
 	}
 }
 
+#post_footer {
+	#text-14 {
+		.drop-shadow(0px, 0px, 4px, rgba(158, 136, 134,0.6));
+		background:@color_light;
+		height:100px;
+		font-family:@serif;
+		color:@color_midtone;
+		.header {
+			margin:10px;
+			display:block;
+			font-size:16px;
+		}
+		.caption {
+			margin:10px;
+			margin-top:10px;
+			display:block;
+			font-size:11px;
+			font-style:italic;
+			color:@color_off_black;
+			a {
+				color:@color_off_black;
+			}
+		}
+	}
+
+	#post_footer_off_franklin_promo {
+		background:url(../../images/promos.png) 0px 0px no-repeat;
+		display:block;
+		width:190px;
+		height:100px;
+		.drop-shadow(0px, 0px, 4px, rgba(158, 136, 134,0.6));
+		text-decoration:none;
+		.content {
+			display:block;
+			width:100px;
+			height:80px;
+			padding:10px;
+			color:@color_highlight;
+			background: rgba(93,80,79,.85);
+			
+			.header {
+				display:block;
+				font-size:14px;
+			}
+			
+			.caption {
+				margin-top:15px;
+				display:block;
+				font-size:11px;
+				font-family:@serif;
+				font-style:italic;
+			}
+		}
+	}
+}
+
 
 #page_footer {
 
 	#text-6 {
-		margin-top:-30px;
+		margin-top:(@row-height*-2);
+	}
+	
+	#text-7 {
+		#footer_submit_options {
+			.reset-dimensions;
+			list-style:none;
+			li.design, li.web, li.motion {
+				.reset-dimensions;
+				float:left;
+				margin-right:20px;
+				text-align:center;
+				a {
+					display:block;
+					width:50px;
+					height:39px;
+					text-indent:-9999px;
+				}
+				span {
+					display:block;
+					margin-top:2px;
+				}
+			}
+
+			li.design a {
+				.sprite-background(-5px, -150px);
+			}
+
+			li.web a {
+				.sprite-background(-60px, -150px);
+			}
+
+			li.motion a {
+				.sprite-background(-115px, -150px);
+			}
+		}
+		a.learnmore {
+			.reset-dimensions;
+			display:block;
+			font-family:@serif;
+			font-size:24px !important;
+			font-style:italic;
+			text-decoration:none;
+		}
 	}
 
 	#footer_follow_list {
@@ -402,9 +501,7 @@
  font-size:12px;
 
  /* box-shadow */
- -webkit-box-shadow: rgba(0,0,0,0.2) 0px 0px 4px;
- -moz-box-shadow: rgba(0,0,0,0.2) 0px 0px 4px;
- box-shadow: rgba(0,0,0,0.2) 0px 0px 4px;
+ .drop-shadow(0px, 0px, 4px, rgba(158, 136, 134,0.6));
 
 	#rss_promo_top {
 	 display:block;
@@ -438,8 +535,6 @@
 				span {
 					display:block;
 					font-size:12px;
-					font-family:@sans-serif;
-					font-style:normal;
 				}
 			}
 		}
